/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.1.0/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

String baseOpenCVLib="/usr/lib/java/"

dependencies {

    implementation files(baseOpenCVLib+'opencv.jar')

    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

run{
 jvmArgs += ["-Djava.library.path="+baseOpenCVLib]
 jvmArgs += ["--enable-native-access=ALL-UNNAMED"]
}

application {
    // Define the main class for the application.
    mainClass = 'org.example.App'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

tasks.register("runVideo", JavaExec) {
    group = "application"
    description = "Gera um vídeo rotacionando uma imagem"

    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'org.example.App'


    // Passar argumentos:
    //   ./gradlew runVideo --args="lui.jpg saida.avi 30"
    String arquivo="/var/home/spedison/Downloads/luigi-ritchie-50mUfGME7-c-unsplash.jpg"
    String duracao="40"
    String saida="lui.avi"
 
    doFirst {
        /*if (!project.hasProperty("args")) {
            throw new GradleException("Uso: ./gradlew runVideo --args=\"<imagem> <saida> <duracao>\"")
        }*/
        args = ["v", arquivo]
        args += [saida]
        args += [duracao]
    }

    // Biblioteca nativa OpenCV
    jvmArgs += ["-Djava.library.path="+baseOpenCVLib]
    jvmArgs += ["--enable-native-access=ALL-UNNAMED"]
}


